--- a/ModulMatka/ModulMatka.ioc
+++ b/ModulMatka/ModulMatka.ioc
@@ -123,7 +123,7 @@ PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.6
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
